--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,7 @@
         </div>
         <div class="message gray-bg">
           <div class="message-sender">Joi</div>
-          <div class="message-text">Not much, just living the dream. How about you?</div>
+          <div class="message-text">The atomic number of Carbon is 6.</div>
           <div class="message-timestamp">10:35 AM</div>
         </div>
       </div>
