--- a/chat.html
+++ b/chat.html
@@ -41,14 +41,14 @@
           <div class="message-timestamp">10:30 AM</div>
         </div>
         <div class="message gray-bg">
-          <div class="message-sender">Jane</div>
+          <div class="message-sender">Joi</div>
           <div class="message-text">The atomic number of Carbon is 6.</div>
           <div class="message-timestamp">10:35 AM</div>
         </div>
       </div>
 
       <form class="chat-input-form">
-        <input type="text" class="chat-input" required placeholder="Type here, John..." />
+        <input type="text" class="chat-input" required placeholder="Type here!" />
         <button type="submit" class="button send-button">Send</button>
       </form>
       <button class="button clear-chat-button">Clear Chat</button>
