--- a/chat.html
+++ b/chat.html
@@ -28,8 +28,8 @@
         </header>
     <!-- Person selector: this contains buttons for user to select whether to chat as John or Jane -->
     <div class="person-selector">
-      <button class="button person-selector-button active-person" id="john-selector">Chat 1</button>
-    <button class="button person-selector-button" id="jane-selector">Chat 2</button>
+      <button class="button person-selector-button active-person" id="model1-selector">Chat 1</button>
+    <button class="button person-selector-button" id="model2-selector">Chat 2</button>
     </div>
     <div class="chat-container">
 
