--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     </div>
     <div class="footer-copyright">
-        <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">Stackoverflow & ChatGPT</span></p>
+        <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">(insert favourite company)</span></p>
     </div>
 </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
