--- a/blog.html
+++ b/blog.html
@@ -21,12 +21,13 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./blog.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header-wrapper">
+    <header class="header blog-header">
+        <div class="header-wrapper blog-header-wrapper">
             <a href="./index.html" class="header-main">Joi</a>
-        <ul class="header-list">
+        <ul class="header-lis blog-header-list">
             <li class="header-list-item"><a href="./about.html">About</a></li>
             <li class="header-list-item"><a href="./contact.html">Contact</a></li>
             <li class="header-list-item"><a href="./blog.html">Blog</a></li>
@@ -34,7 +35,7 @@
         </ul>
         <form class="color-picker"
         action="">
-            <fieldset class="fieldset">
+            <fieldset class="fieldset blog.fieldset">
                 <div class="checkbox-wrapper">
                     <label for="theme" class="theme-clr-light">
                         <!-- <span><img src="./igm/Check.svg" alt="" class="checkbox-span"></span> -->
