--- a/blog.html
+++ b/blog.html
@@ -28,10 +28,10 @@
         <div class="header-wrapper blog-header-wrapper">
             <a href="./index.html" class="header-main">Joi</a>
         <ul class="header-lis blog-header-list">
-            <li class="header-list-item"><a href="./about.html">About</a></li>
-            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
-            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Models</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./about.html" class="blog-header-list-link">About</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./contact.html" class="blog-header-list-link">Contact</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./blog.html" class="blog-header-list-link">Blog</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./deployment.html" class="blog-header-list-link">Models</a></li>
         </ul>
         <form class="color-picker"
         action="">
@@ -68,7 +68,7 @@
                    
             </fieldset>
         </form>
-        <p class="header-para"><a href="./dev.html">Developer</a></p>
+        <p class="header-para"><a href="./dev.html" class="blog-header-para">Developer</a></p>
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
