--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Handjet:wght@100..900&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
-<link
-rel="stylesheet"
-href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
-/>
+<link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"/>
 
 <!-- <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
 
@@ -86,6 +84,7 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
         </div>
         </header>
 <!--     <script>
+
         const cursor = new MouseFollower({
           el: null,
           container: document.body,
@@ -125,5 +124,6 @@ href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css"
           hideMediaTimeout: 300,
         });
       </script> -->
-</body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
 </html>
