--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./igm/pexels-luis-gomes-166706-546819.jpg" class="d-block w-100" alt="...">
+            <img src="./igm/page1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="./igm/pexels-luis-gomes-166706-546819.jpg" class="d-block w-100" alt="...">
