--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 <section class="carousel-section">
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active carousel-indicator" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"  class="active carousel-indicator"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"  class="active carousel-indicator"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./igm/page1.png" class="d-block w-100" alt="...">
+            <img src="./igm/paginator1.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="./igm/pexels-luis-gomes-166706-546819.jpg" class="d-block w-100" alt="...">
